--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@sendgrid/mail": "^8.1.5",
     "@shadcn/ui": "^0.0.4",
-    "@supabase/supabase-js": "^2.52.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.52.1",
     "@tanstack/react-query": "^5.69.0",
     "axios": "^1.8.3",
     "bcrypt": "^6.0.0",
