--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwind-variants": "^1.0.0",
+    "pdfkit": "^0.15.0",
     "tw-animate-css": "^1.2.4",
     "zod": "^3.24.2"
   },
@@ -58,6 +59,7 @@
     "@types/react-dom": "^19",
     "prisma": "^6.12.0",
     "tailwindcss": "^4.0.14",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@types/pdfkit": "^0.13.6"
   }
 }
