--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.0",
+    "formidable": "^2.1.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.483.0",
     "next": "15.2.2",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
+    "pdfkit": "^0.15.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -46,7 +48,6 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwind-variants": "^1.0.0",
-    "pdfkit": "^0.15.0",
     "tw-animate-css": "^1.2.4",
     "zod": "^3.24.2"
   },
@@ -55,11 +56,11 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
+    "@types/pdfkit": "^0.13.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "prisma": "^6.12.0",
     "tailwindcss": "^4.0.14",
-    "typescript": "^5",
-    "@types/pdfkit": "^0.13.6"
+    "typescript": "^5"
   }
 }
