--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "tailwind-merge": "^3.0.2",
     "tailwind-variants": "^1.0.0",
     "tw-animate-css": "^1.2.4",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
